sxge/sxgevf: add new driver
Orabug: 13444150
Signed-off-by: Maxim Uvarov <maxim.uvarov@oracle.com>

--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -2929,6 +2929,9 @@ source "drivers/net/benet/Kconfig"
 
 source "drivers/net/hxge/Kconfig"
 
+source "drivers/net/sxge/Kconfig"
+source "drivers/net/sxgevf/Kconfig"
+
 endif # NETDEV_10000
 
 source "drivers/net/tokenring/Kconfig"
