nvme: Backport NVM Express driver from UEK3
A backport of the version of the NVM Express driver we are using in
UEK3. This corresponds to the following commits:

b60503b NVMe: New driver
3001082 NVMe: Factor out queue_request_irq()
b3b0681 NVMe: Reduce set_queue_count arguments by one
1b23484 NVMe: Implement per-CPU queues
8212346 NVMe: Rename 'cycle' to 'phase'
53c9577 NVMe: Fix admin IRQ claim on real hardware
36c14ed NVMe: Use PRP2 for the nvme_identify ioctl
ff22b54 NVMe: Add nvme_setup_prps()
b8deb62 NVMe: Zero the command before we send it
bd38c55 NVMe: Change NVME_IOCTL_GET_RANGE_TYPE to return all the ranges
7fc3cda NVMe: Create nvme_map_user_pages() and nvme_unmap_user_pages()
a53295b NVMe: Add NVME_IOCTL_SUBMIT_IO
5181423 NVMe: Read the model, serial & firmware rev from the controller
8e9f0e7 NVMe: Remove 'node' from nvme_dev
3f85d50 NVMe: Check returns from nvme_alloc_queue()
0ee5a7d NVMe: Enable and disable the PCI device
f64d336 NVMe: Enable device DMA
2930353 NVMe: Allow queues to be allocated above 4GB
574e8b9 NVMe: Request I/O regions
5911f20 NVMe: Disable the device before we write the admin queues
388f037 NVMe: Move sysfs entries to the right place
6ee44cd NVMe: Add download / activate firmware ioctls
db5d0c1 NVMe: Release 0.2
3c0cf13 NVMe: Allow fatal signals to interrupt I/O
b1ad37e NVMe: Call put_nvmeq() before calling nvme_submit_sync_cmd()
58ffacb NVMe: Add a module parameter to use a threaded interrupt
be7b627 NVMe: Use a symbolic name to represent cancelled commands instead of 0
b36235d NVMe: Detect commands that are completed twice
48e3d39 NVMe: Detect command IDs completing that are out of range
ec6ce61 NVMe: Need to lock queue during interrupt handling
e85248e NVMe: Record the timeout for each command
9294bbe NVMe: Handle the congestion list a little better
d2d8703 NVMe: Renumber the special context values
51882d0 NVMe: Advance the sg pointer when filling in an sg list
e025344c NVMe: Initial PRP List support
d534df3 NVMe: Rename nvme_req_

--- a/drivers/block/Makefile
+++ b/drivers/block/Makefile
@@ -23,6 +23,7 @@ obj-$(CONFIG_XILINX_SYSACE)	+= xsysace.o
 obj-$(CONFIG_CDROM_PKTCDVD)	+= pktcdvd.o
 obj-$(CONFIG_MG_DISK)		+= mg_disk.o
 obj-$(CONFIG_SUNVDC)		+= sunvdc.o
+obj-$(CONFIG_BLK_DEV_NVME)	+= nvme.o
 obj-$(CONFIG_BLK_DEV_OSD)	+= osdblk.o
 
 obj-$(CONFIG_BLK_DEV_UMEM)	+= umem.o
@@ -42,4 +43,5 @@ obj-$(CONFIG_BLK_DEV_RBD)     += rbd.o
 
 obj-$(CONFIG_ORACLEASM)		+= oracleasm/
 
+nvme-y		:= nvme-core.o nvme-scsi.o
 swim_mod-y	:= swim.o swim_asm.o
