--- a/arch/x86/xen/Kconfig
+++ b/arch/x86/xen/Kconfig
@@ -54,3 +54,9 @@ config XEN_DEBUG_FS
 config MICROCODE_XEN
 	def_bool y
 	depends on XEN_DOM0 && MICROCODE
+
+config XEN_PVH
+	bool "Support for running as a PVH guest"
+	depends on X86_64 && XEN && BROKEN
+	select XEN_PVHVM
+	def_bool n
