Revert "mpt2sas: update to LSI version 16.05.01.00"
This reverts commit c58a9d2f042b66e689c49e43c343630acf3289f1.

Orabug: 19015667

Signed-off-by: Martin K. Petersen <martin.petersen@oracle.com>
Signed-off-by: Guangyu Sun <guangyu.sun@oracle.com>

--- a/drivers/scsi/mpt2sas/Makefile
+++ b/drivers/scsi/mpt2sas/Makefile
@@ -1,12 +1,7 @@
 # mpt2sas makefile
-EXTRA_CFLAGS := -DCPQ_CIM
-
-# comment out this line so driver can compile for kernels not having mpt2sas
-#obj-$(CONFIG_SCSI_MPT2SAS) += mpt2sas.o
-obj-m += mpt2sas.o
-mpt2sas-y +=  mpt2sas_base.o     \
-		mpt2sas_config.o \
-		mpt2sas_scsih.o      \
-		mpt2sas_transport.o     \
-		mpt2sas_ctl.o  \
-		mpt2sas_trigger_diag.o
+obj-$(CONFIG_SCSI_MPT2SAS) += mpt2sas.o
+mpt2sas-y +=  mpt2sas_base.o        \
+		mpt2sas_config.o    \
+		mpt2sas_scsih.o     \
+		mpt2sas_transport.o \
+		mpt2sas_ctl.o
