--- a/drivers/scsi/mpt2sas/Kconfig
+++ b/drivers/scsi/mpt2sas/Kconfig
@@ -2,7 +2,7 @@
 # Kernel configuration file for the MPT2SAS
 #
 # This code is based on drivers/scsi/mpt2sas/Kconfig
-# Copyright (C) 2007-2013  LSI Corporation
+# Copyright (C) 2007-2012  LSI Corporation
 #  (mailto:DL-MPTFusionLinux@lsi.com)
 
 # This program is free software; you can redistribute it and/or
@@ -49,16 +49,16 @@ config SCSI_MPT2SAS
 	This driver supports PCI-Express SAS 6Gb/s Host Adapters.
 
 config SCSI_MPT2SAS_MAX_SGE
-	int "LSI MPT Fusion Max number of SG Entries (16 - 256)"
+	int "LSI MPT Fusion Max number of SG Entries (16 - 128)"
 	depends on PCI && SCSI && SCSI_MPT2SAS
 	default "128"
-	range 16 256
+	range 16 128
 	---help---
 	This option allows you to specify the maximum number of scatter-
 	gather entries per I/O. The driver default is 128, which matches
-	MAX_PHYS_SEGMENTS in most kernels.  However in SuSE kernels this
-	can be 256. However, it may decreased down to 16.  Decreasing this
-	parameter will reduce memory requirements on a per controller instance.
+	SAFE_PHYS_SEGMENTS.  However, it may decreased down to 16.
+	Decreasing this parameter will reduce memory requirements
+	on a per controller instance.
 
 config SCSI_MPT2SAS_LOGGING
 	bool "LSI MPT Fusion logging facility"
