qlcnic: make Kconfig changes
As Qlogic's request, sync with upstream, which fix Kconfig dependency.

Orabug: 19167877

Signed-off-by: Vaughan Cao <vaughan.cao@oracle.com>
Signed-off-by: Guangyu Sun <guangyu.sun@oracle.com>

--- a/drivers/net/ethernet/qlogic/Kconfig
+++ b/drivers/net/ethernet/qlogic/Kconfig
@@ -46,15 +46,15 @@ config QLCNIC_SRIOV
           environments.
 
 config QLCNIC_HWMON
-	bool "QLOGIC QLCNIC 82XX and 83XX family HWMON-SYSFS support"
-	depends on QLCNIC && HWMON
+	bool "QLOGIC QLCNIC 82XX and 83XX family HWMON support"
+	depends on QLCNIC && HWMON && !(QLCNIC=y && HWMON=m)
 	default y
 	---help---
-	  This configuration parameter can be used to read
-	  the board temperature in QLE83XX, QLE84XX and QLE82XX
-	  Converged Ethernet devices.
+	  This configuration parameter can be used to read the
+	  board temperature in Converged Ethernet devices
+	  supported by qlcnic.
 
-	  This option is supported via the hwmon-sysfs interface.
+	  This data is available via the hwmon sysfs interface.
 
 config QLGE
 	tristate "QLogic QLGE 10Gb Ethernet Driver Support"
