memory: sparc64: Add privileged ADI driver
This patch adds an ADI driver for reading/writing MCD versions
using physical addresses from privileged user space processes.
This file maps linearly to physical memory at a ratio of
1:adi_blksz.  A read (or write) of offset K in the file operates
upon physical address K * adi_blksz.  The version information
is encoded as one version per byte.  Intended consumers are
makedumpfile and crash.

Orabug: 2617080
Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>
Reviewed-by: Anthony Yznaga <anthony.yznaga@oracle.com>
Reviewed-by: Khalid Aziz <khalid.aziz@oracle.com>
Reviewed-by: Shannon Nelson <shannon.nelson@oracle.com>
Signed-off-by: Allen Pais <allen.pais@oracle.com>

--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -92,6 +92,15 @@ config JZ4780_NEMC
 	  the Ingenic JZ4780. This controller is used to handle external
 	  memory devices such as NAND and SRAM.
 
+config ADI
+	tristate "SPARC Privileged ADI driver"
+	default m
+	depends on SPARC64
+	help
+	  This driver provides read/write access to MCD versions for
+	  privileged processes.  Intended consumers include crash and
+	  makedumpfile.
+
 source "drivers/memory/tegra/Kconfig"
 
 endif
