--- a/arch/sparc/Kconfig
+++ b/arch/sparc/Kconfig
@@ -97,6 +97,10 @@ config ARCH_PROC_KCORE_TEXT
 config CPU_BIG_ENDIAN
 	def_bool y
 
+config ARCH_ATU
+	bool
+	default y if SPARC64
+
 config IOMMU_HELPER
 	bool
 	default y if SPARC64
@@ -379,6 +383,7 @@ config ARCH_SPARSEMEM_DEFAULT
 
 config FORCE_MAX_ZONEORDER
 	int "Maximum zone order"
+	default "13" if ARCH_ATU
 	default "13" if KEXEC
 	default "16"
 	help
