--- a/README.template
+++ b/README.template
@@ -14,7 +14,7 @@ This repository hosts source code for UEK versions which are in development and 
 |--------------------|-----------------------------|----------------------|-----------------|--------------------------------------------|
 | ##uek5/master## | v4.14 | Development | `x86_64`, `aarch64` | Oracle Linux 7 |
 | ##uek4/master## | v4.1 | Production | `x86_64`, `SPARC` | Oracle Linux 6, Oracle Linux 7 |
-| ##uek3/master## | v3.8 | Production | `x86_64` | Oracle Linux 5, Oracle LInux 6, Oracle Linux 7 |
+| ##uek3/master## | v3.8 | Production | `x86_64` | Oracle Linux 6, Oracle Linux 7 |
 | ##uek2/master## | v3.0 | Production | `x86_64`, `SPARC` | Oracle Linux 5, Oracle Linux 6 |
 
 
