MIPS: OCTEON: OCTEON III build and configuration option
Allow the kernel to build with the -march=octeon3 compiler flag

Orabug: 36725623

Signed-off-by: Dave Kleikamp <dave.kleikamp@oracle.com>
Reviewed-by: Vijay Kumar <vijay.ac.kumar@oracle.com>
Signed-off-by: Brian Maly <brian.maly@oracle.com>

--- a/arch/mips/Makefile
+++ b/arch/mips/Makefile
@@ -191,6 +191,16 @@ cflags-$(CONFIG_CPU_R10000)	+= $(call cc-option,-march=r10000,-march=r8000) \
 			-Wa,--trap
 
 ifdef CONFIG_CPU_CAVIUM_OCTEON
+ifdef CONFIG_CAVIUM_OCTEON3
+cflags-y += $(call cc-option,-march=octeon3) -Wa,--trap
+ifeq (,$(findstring march=octeon3, $(cflags-y)))
+cflags-y += -Wa,-march=octeon3
+endif
+ifndef CONFIG_VIRUTALIZATION
+# This removes a lot of warnings
+cflags-y += -Wa,-mno-virt
+endif
+else
 ifdef CONFIG_CAVIUM_OCTEON2
 cflags-y += $(call cc-option,-march=octeon2) -Wa,--trap
 ifeq (,$(findstring march=octeon2, $(cflags-y)))
@@ -200,6 +210,7 @@ else
 cflags-y += $(call cc-option,-march=octeon) -Wa,--trap
 ifeq (,$(findstring march=octeon, $(cflags-y)))
 cflags-y += -Wa,-march=octeon
+endif
 endif
 endif
 endif
