selftests/bpf: do not run test_kmod.sh for UEK5
It depends on the test_bpf module being present; it is not
for UEK5.

Orabug: 31357234

Signed-off-by: Alan Maguire <alan.maguire@oracle.com>
Reviewed-by:  John Donnelly <John.p.donnelly@oracle.com>
Signed-off-by: Somasundaram Krishnasamy <somasundaram.krishnasamy@oracle.com>

--- a/tools/testing/selftests/bpf/Makefile
+++ b/tools/testing/selftests/bpf/Makefile
@@ -19,7 +19,7 @@ TEST_GEN_FILES = test_pkt_access.o test_xdp.o test_l4lb.o test_tcp_estats.o test
 	test_pkt_md_access.o test_xdp_redirect.o sockmap_parse_prog.o sockmap_verdict_prog.o \
 	test_tcpbpf_kern.o
 
-TEST_PROGS := test_kmod.sh test_xdp_redirect.sh
+TEST_PROGS := test_xdp_redirect.sh
 
 TEST_PROGS_EXTENDED :=  \
 	tcp_client.py \
