RPi: dts: enable rpi4 touchscreen, i2c, and spi
Enable RPI touchscreen, i2c0, i2c1, spi0.

PINMAP:
I2C0:
GPIO00(27) - SDA0
GPIO01(28) - SCL0

I2C1:
GPIO02(03) - SDA1
GPIO03(05) - SCL1

SPI0:
GPIO08(24) - SPI0_CE0_N
GPIO09(21) - SPI0_MISO
GPIO10(19) - SPI0_MOSI
GPIO11(23) - SPI0_SCLK

UART3 with full flow-control (disabled):
GPIO04(07) - TXD3
GPIO05(29) - RXD3
GPIO06(31) - CTS3
GPIO07(26) - RTS3

UART5 no flow-control (disabled):
GPIO12(32) - TXD5
GPIO13(33) - RXD5

Orabug: 32201843

Suggested-by: Andrew Thomas <andrew.thomas@oracle.com>
Signed-off-by: Tom Saeger <tom.saeger@oracle.com>
Reviewed-by: Vijay Kumar <vijay.ac.kumar@oracle.com>

--- a/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -216,6 +216,14 @@
 	};
 };
 
+&gpio {
+	/* single CS0 SPI, leave out CS1 */
+	spi0_gpio8: spi0_gpio8 {
+		brcm,pins = <8 9 10 11>;
+		brcm,function = <BCM2835_FSEL_ALT0>;
+	};
+};
+
 /* uart1 is mapped to the pin header */
 &uart1 {
 	pinctrl-names = "default";
@@ -225,4 +233,52 @@
 
 &vchiq {
 	interrupts = <GIC_SPI 34 IRQ_TYPE_LEVEL_HIGH>;
+};
+
+/* leave uart2 disabled, conflicts with i2c */
+&uart2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart2_gpio0>;
+	status = "disabled";
+};
+
+/* uart3 with hw flow-control */
+&uart3 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart3_gpio4 &uart3_ctsrts_gpio6>;
+	status = "disabled";
+};
+
+/* leave uart4 disabled, conflicts with spi0 */
+&uart4 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart4_gpio8>;
+	status = "disabled";
+};
+
+/* enable only TX/RX.  CTS/RTS pins conflict with uart0/uart1 on GPIO14,15 */
+&uart5 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart5_gpio12>;
+	status = "disabled";
+};
+
+/* select single CS0 SPI.  CS1 conflicts with UART3 RTS */
+&spi {
+	pinctrl-names = "default";
+	pinctrl-0 = <&spi0_gpio8>;
+	status = "okay";
+};
+
+&firmware {
+	ts: touchscreen {
+	    compatible = "raspberrypi,firmware-ts";
+	    touchscreen-size-x = <800>;
+	    touchscreen-size-y = <480>;
+	};
+
+	rpi_backlight: rpi_backlight {
+	    compatible = "raspberrypi,rpi-backlight";
+	    status = "okay";
+	};
 };
