RPi: dts: rpi4 add gpiomem
Add gpiomem device.

Orabug: 32833361

Signed-off-by: Tom Saeger <tom.saeger@oracle.com>
Reviewed-by: Vijay Kumar <vijay.ac.kumar@oracle.com>

--- a/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -270,6 +270,10 @@
 	status = "okay";
 };
 
+&gpiomem {
+	status = "okay";
+};
+
 &firmware {
 	ts: touchscreen {
 	    compatible = "raspberrypi,firmware-ts";
