--- a/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -268,6 +268,16 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&spi0_gpio8>;
 	status = "okay";
+
+	spidev0: spidev@0 {
+		compatible = "rpi,rpi-board";
+		reg = <0>;  /* CE0 */
+		#address-cells = <1>;
+		#size-cells = <0>;
+		spi-max-frequency = <125000000>;
+		status = "okay";
+	};
+
 };
 
 &gpiomem {
