RPi:dts/bcm2711: Enable pwm for RPi4 board
Enable pwm for GPIO 12, 13 and 19 on RPi4

Orabug: 32833361

Signed-off-by: Vijay Kumar <vijay.ac.kumar@oracle.com>
Reviewed-by: Tom Saeger <tom.saeger@oracle.com>

--- a/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -164,6 +164,12 @@
 			  "RGMII_TXD3";
 };
 
+&pwm {
+        pinctrl-names = "default";
+        pinctrl-0 = <&pwm0_0_gpio12 &pwm0_1_gpio13 &pwm0_1_gpio19>;
+        status = "okay";
+};
+
 &pwm1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pwm1_0_gpio40 &pwm1_1_gpio41>;
