Allow indepenent setting of alternate PCRs 19 and 20
This allows more flexibility. It also addresses the issue in the ticket
where measuring the initrd needs to be moved back to PCR 17.

Orabug: 32436143

Signed-off-by: Ross Philipson <ross.philipson@oracle.com>
Reviewed-by: Patrick Colp <patrick.colp@oracle.com>
Reviewed by: Hugo Magalhaes <hugo.magalhaes@oracle.com>

Signed-off-by: Kanth Ghatraju <kanth.ghatraju@oracle.com>
Signed-off-by: Brian Maly <brian.maly@oracle.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -2006,15 +2006,24 @@ config SECURE_LAUNCH_SHA512
 
 endchoice
 
-config SECURE_LAUNCH_ALT_PCRS
-	bool "Secure Launch Alternate PCR usage"
+config SECURE_LAUNCH_ALT_PCR19
+	bool "Secure Launch Alternate PCR 19 usage"
 	default n
 	depends on SECURE_LAUNCH
 	help
 	   In the post ACM environment, Secure Launch by default measures
-	   configuration information into PCR18 and image data into PCR17.
-	   This feature allows finer control over measurements by moving
-	   configuration measurements into PCR19 and image measurements
+	   configuration information into PCR18. This feature allows finer
+	   control over measurements by moving configuration measurements
+	   into PCR19.
+
+config SECURE_LAUNCH_ALT_PCR20
+	bool "Secure Launch Alternate PCR 20 usage"
+	default n
+	depends on SECURE_LAUNCH
+	help
+	   In the post ACM environment, Secure Launch by default measures
+	   image data like any external initrd into PCR17. This feature
+	   allows finer control over measurements by moving image measurements
 	   into PCR20.
 
 config SECCOMP
