--- a/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -233,9 +233,14 @@
 
 &gpio {
 	/* single CS0 SPI, leave out CS1 */
-	spi0_gpio8: spi0_gpio8 {
-		brcm,pins = <8 9 10 11>;
+	spi0_gpio9: spi0_gpio9 {
+		brcm,pins = <9 10 11>;
 		brcm,function = <BCM2835_FSEL_ALT0>;
+	};
+
+	spi0_cs_gpio8: spi0_cs_gpio8 {
+		brcm,pins = <8>;
+		brcm,function = <BCM2835_FSEL_GPIO_OUT>;
 	};
 };
 
@@ -281,16 +286,19 @@
 /* select single CS0 SPI.  CS1 conflicts with UART3 RTS */
 &spi {
 	pinctrl-names = "default";
-	pinctrl-0 = <&spi0_gpio8>;
+	pinctrl-0 = <&spi0_gpio9 &spi0_cs_gpio8>;
+	cs-gpios = <&gpio 8 1>;
 	status = "okay";
 
 	spidev0: spidev@0 {
-		compatible = "rpi,rpi-board";
+		compatible = "abracon,abeoa9";
 		reg = <0>;  /* CE0 */
 		#address-cells = <1>;
 		#size-cells = <0>;
 		spi-max-frequency = <125000000>;
 		status = "okay";
+		trickle-resistor-ohms = <1000>;
+		spi-cs-high;
 	};
 
 };
