dts/bcm2711: set gpio6 to level=0 and pull=down
Set gpio6 default to level=0 and pull=down for closed cover.

Orabug: 32201843

Signed-off-by: Vijay Kumar <vijay.ac.kumar@oracle.com>
Reviewed-by: Tom Saeger <tom.saeger@oracle.com>

--- a/arch/arm/boot/dts/bcm2711.dtsi
+++ b/arch/arm/boot/dts/bcm2711.dtsi
@@ -493,7 +493,8 @@
 		pin-sda {
 			function = "alt5";
 			pins = "gpio6";
-			bias-pull-up;
+			bias-pull-down;
+			output-low;
 		};
 		pin-scl {
 			function = "alt5";
