rust: enable Rust for 32-bit arm
Everything is now in place to enable Rust support on 32-bit
arm. Enable only on architectures compatible with the armv6
instruction set.

Signed-off-by: Sven Van Asbroeck <thesven73@gmail.com>
[normalized title]
Signed-off-by: Miguel Ojeda <ojeda@kernel.org>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -58,7 +58,7 @@ config LLD_VERSION
 	default 0
 
 config HAS_RUST
-	depends on ARM64 || (PPC64 && CPU_LITTLE_ENDIAN) || X86_64
+	depends on ARM64 || CPU_32v6 || CPU_32v6K || (PPC64 && CPU_LITTLE_ENDIAN) || X86_64
 	def_bool $(success,$(RUSTC) --version)
 
 config RUSTC_VERSION
