samples: rust: add `rust_random` sample that uses `module_misc_device`
Signed-off-by: Wedson Almeida Filho <wedsonaf@google.com>
[normalized title]
Signed-off-by: Miguel Ojeda <ojeda@kernel.org>

--- a/samples/rust/Makefile
+++ b/samples/rust/Makefile
@@ -9,3 +9,4 @@ obj-$(CONFIG_SAMPLE_RUST_MISCDEV)		+= rust_miscdev.o
 obj-$(CONFIG_SAMPLE_RUST_STACK_PROBING)		+= rust_stack_probing.o
 obj-$(CONFIG_SAMPLE_RUST_SEMAPHORE)		+= rust_semaphore.o
 obj-$(CONFIG_SAMPLE_RUST_SEMAPHORE_C)		+= rust_semaphore_c.o
+obj-$(CONFIG_SAMPLE_RUST_RANDOM)		+= rust_random.o
