--- a/samples/rust/Kconfig
+++ b/samples/rust/Kconfig
@@ -100,4 +100,14 @@ config SAMPLE_RUST_SEMAPHORE_C
 
 	  If unsure, say N.
 
+config SAMPLE_RUST_RANDOM
+	tristate "Random"
+	help
+	  This option builds the Rust random sample.
+
+	  To compile this as a module, choose M here:
+	  the module will be called rust_random.
+
+	  If unsure, say N.
+
 endif # SAMPLES_RUST
