Revert "ctf: fix bashism"
This reverts commit 10cc427554b896fa882720d070a554f4aa373f12.

Orabug: 33756037
Signed-off-by: Nick Alcock <nick.alcock@oracle.com>
Reviewed-by: Victor Erminpour <victor.erminpour@oracle.com>
Reviewed-by: Kris Van Hees <kris.van.hees@oracle.com>

--- a/scripts/Makefile.modfinal
+++ b/scripts/Makefile.modfinal
@@ -113,7 +113,7 @@ endef
 
 $(ctf-filelist-raw): $(ctf-builtins-prereq) $(ctf-modules)
 	@rm -f $(ctf-filelist-raw);
-	@if [ -n "$(ctf-dir-mk)" ]; then \
+	@if [[ -n "$(ctf-dir-mk)" ]]; then \
 		mkdir -p "$(ctf-dir-mk)"; \
 	fi
 	$(call xargs,@printf "%s\n" >> $(ctf-filelist-raw),$^)
