--- a/drivers/soc/marvell/Makefile
+++ b/drivers/soc/marvell/Makefile
@@ -10,13 +10,12 @@ obj-y		+= octeontx2-ccu/
 obj-y 		+= hw-access/
 obj-y 		+= octeontx2-serdes/
 obj-y           += cn10ka-swup/
+obj-y       += octeontx2-ghes/
 obj-$(CONFIG_OCTEONTX_INFO) += octeontx_info.o
 obj-$(CONFIG_MVMDIO_UIO) += mvmdio_uio.o
 obj-$(CONFIG_MRVL_PHY_DIAGNOSTICS) += phy_diag.o
 obj-$(CONFIG_MRVL_PHY_7121P_MAC_ADV_FEATURES) += phy_7121p_macadv_features.o
 obj-$(CONFIG_MARVELL_CN10K_SERDES_DIAGNOSTICS) += cn10k_serdes_diag.o
-obj-$(CONFIG_EDAC_OCTEONTX) += octeontx2-ghes/
 obj-$(CONFIG_OCTEONTX2_PCI_CONSOLE) += octeontx2-pcicons/
 obj-$(CONFIG_MARVELL_FWLOG) += fwlog.o
 obj-$(CONFIG_MARVELL_CN10K_EINJ) += cn10k-einj.o
-
