--- a/drivers/soc/marvell/octeontx2-ghes/Makefile
+++ b/drivers/soc/marvell/octeontx2-ghes/Makefile
@@ -3,5 +3,6 @@
 # Makefile for Marvell's OcteonTX2 SDEI/GHES device driver
 #
 
+obj-$(CONFIG_ACPI_APEI) += otx2-ghes-init.o
 obj-$(CONFIG_OCTEONTX2_GHES_BERT) += otx2-ghes-bert.o
 obj-$(CONFIG_OCTEONTX2_EINJ) += otx2-einj.o
