driver: edac: octeontx: Align records layout with firmware
Unify records layout between EDAC and APEI framework
Use extended ring buffer records to fit the ACPI
framework expectations

Signed-off-by: Vasyl Gomonovych <vgomonovych@marvell.com>
Change-Id: I561c88de7f932016071d8ba6826af75aa4c9039a
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/kernel/linux/+/89194
Reviewed-by: Jayanthi Annadurai <jannadurai@marvell.com>
Reviewed-by: Chandrakala Chavva <cchavva@marvell.com>
Tested-by: sa_ip-sw-jenkins <sa_ip-sw-jenkins@marvell.com>

Orabug: 35079654

Signed-off-by: Dave Kleikamp <dave.kleikamp@oracle.com>
Reviewed-by: Thomas Tai <thomas.tai@oracle.com>
Signed-off-by: Brian Maly <brian.maly@oracle.com>

--- a/drivers/edac/Kconfig
+++ b/drivers/edac/Kconfig
@@ -530,7 +530,7 @@ config EDAC_OCTEONTX
 	help
 	  Support for error detection and correction on the
 	  Marvell OcteonTX2 and CN10K SoCs.
-	  This driver will allow SECDED errors detected in
+	  This driver will allow SECDED errors notify and report in
 	  the firmware first model and reported via SDEI callbacks.
 	  EDAC Driver report Single Bit Errors and Double Bit Errors.
 
