drivers: sdhci: Add option to configure sdhci timeout
Add config option to choose the sdhci timeout in seconds.

Change-Id: If731012000d194a94f948cfde410f4e2184b0274
Signed-off-by: Jayanthi Annadurai <jannadurai@marvell.com>
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/kernel/linux/+/90483
Reviewed-by: Chandrakala Chavva <cchavva@marvell.com>
Tested-by: sa_ip-sw-jenkins <sa_ip-sw-jenkins@marvell.com>

Removed the line:
	default 1 if MMC_SDHCI_CADENCE

from the MMC_SDHCI_TIMOUT config. We don't want to change anything
for the non-Marvell kernels.  Also added a prompt so that the default
can be overridden.  The value of will be set in the embedded kernel's
config file.

Orabug: 35079654

Signed-off-by: Dave Kleikamp <dave.kleikamp@oracle.com>
Reviewed-by: Thomas Tai <thomas.tai@oracle.com>
Signed-off-by: Brian Maly <brian.maly@oracle.com>

--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -1031,3 +1031,10 @@ config MMC_SDHCI_AM654
 	  If you have a controller with this interface, say Y or M here.
 
 	  If unsure, say N.
+
+config MMC_SDHCI_TIMEOUT
+	int "Timeout for MMC_SDHCI command and data"
+	default 10
+	depends on MMC_SDHCI
+	help
+	  Default timeout value for command and data.
