PCI: rename octeontx2-pem-ep driver
Renamed octeontx2-pem-ep to marvell-cnxk-ep.

Signed-off-by: Radha Mohan Chintakuntla <radhac@marvell.com>
Change-Id: I1b999f8930d9162eb5fa5680441db728632ed9d4
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/kernel/linux/+/91851
Reviewed-by: Devapraba Muthumani <dmuthumani@marvell.com>
Tested-by: Devapraba Muthumani <dmuthumani@marvell.com>

Orabug: 35079654

Signed-off-by: Dave Kleikamp <dave.kleikamp@oracle.com>
Reviewed-by: Thomas Tai <thomas.tai@oracle.com>
Signed-off-by: Brian Maly <brian.maly@oracle.com>

--- a/drivers/pci/controller/Kconfig
+++ b/drivers/pci/controller/Kconfig
@@ -221,14 +221,14 @@ config PCI_OCTEON_PEM
 	help
 	  Say Y here if you want PEM controller support for Marvell ARM64 Octeon SoCs.
 
-config PCIE_OCTEONTX2_PEM_EP
-	tristate "Marvell OcteonTx2 PEM EP driver"
+config PCIE_MARVELL_CNXK_EP
+	tristate "Marvell CNXK PEM EP driver"
 	depends on ARM64 && UIO
 	default m
 	help
-	  This driver configures the PEM when OcteonTx is in PCIe EndPoint mode.
-	  It sets up IOMMU to allow the host streamid and program the indexed
-	  BAR region.
+	  This driver configures the PEM when OcteonTx2 and CN10K SoCs are  in PCIe
+	  EndPoint mode. Also it programs the indexed BAR4 regions for mailbox
+	  communication with host.
 
 	  To compile this as a module choose M here.
 
