drivers/soc/pensando: Adding Elba sbus driver
The Elba SBUS driver provides access to non memory-mapped ASIC registers.

Signed-off-by: David Clear <dac2@pensando.io>

Orabug: 35089515

Signed-off-by: Dave Kleikamp <dave.kleikamp@oracle.com>
Reviewed-by: Rob Gardner <rob.gardner@oracle.com>
Signed-off-by: Saeed Mirzamohammadi <saeed.mirzamohammadi@oracle.com>

--- a/drivers/soc/pensando/Makefile
+++ b/drivers/soc/pensando/Makefile
@@ -6,3 +6,4 @@ obj-$(CONFIG_PENSANDO_SOC_CAPMEM) += cap_mem.o
 obj-$(CONFIG_PENSANDO_SOC_PCIE) += cap_pcie.o cap_reboot.o cap_rstcause.o kpcimgr.o
 obj-$(CONFIG_PENSANDO_SOC_CRASH) += cap_crash.o
 obj-$(CONFIG_PENSANDO_SOC_BSM) += cap_bsm.o
+obj-$(CONFIG_PENSANDO_SOC_SBUS) += sbus.o
